make controls box wider to avoid scrollbar in IE7

--- a/public/stylesheets/basic.css
+++ b/public/stylesheets/basic.css
@@ -447,7 +447,7 @@ body.banner {
 }
 
 #banner_controls {
-  width: 120px;
+  width: 140px;
   margin-left: 18px;
 }
 
